tolk-tester/tests/invalid-syntax/err-3417.tolk
const V: int = "".toBase256();

/**
@compilation_should_fail
@stderr invalid or too long integer ascii-constant
 */
